lox-tests/tests/method/not_found.stderr
ERROR: No property 'unknown' on instance
 --> 3:7
  |
3 | Foo().unknown(); // expect runtime error: Undefined property 'unknown'.
  |       ^-----^
